# anipy

./: .gitignore  README.md  pyproject.toml
src/anipy/: anipy-501-lock.json  data.py  util.py
src/anipy/_types/: __init__.py  enums.py  structs.py
src/anipy/cli/: builder.py  cli.py  main.py  player.py  progressbar.py  test.py
src/anipy/core/: __init__.py  data.py  exceptions.py  types.py  util.py
src/anipy/extractors/: __init__.py  megacloud.py  megaplay.py
src/anipy/extractors/old/: _megacloud_v1.py  _megacloud_v2.py  _megacloud_wasm.py
src/anipy/integrations/: __init__.py  mal.py  webhook.py
src/anipy/providers/: __init__.py  allmanga.py  base.py  hianime.py
src/anipy/providers/allmanga/: __init__.py  allanime.py  allmanga.py  api.py  extractor.py  provider.py
src/anipy/providers/animekai/: __init__.py  animekai.py  api.py  megaup.py
src/anipy/providers/hianime/: __init__.py  api.py  hianime.py  megacloud.py  provider.py
src/anipy/web/: app.py
src/anipy/web/static/css/: index.css  items.css  style.css  tailwind.css  topbar.css
src/anipy/web/static/js/: content.js  util.js
src/anipy/web/templates/: completed.html  search.html  watchlist.html
