[project]
name = "anipy"
version = "0.3.9"
description = "animeshka :P"
requires-python = ">=3.9"
dependencies = [
    "Pycryptodome",
    "aiohttp",
    "requests",
    "bs4",
    "flask[async]>=3.1.1",
    "flask-cors>=6.0.1",
]

[project.scripts]
anipy = "anipy.cli.cli:main"
anipyweb = "anipy.web.app:main"
